<resources>

    <string name="app_name">Gestor Gasolina</string>

    <string name="registro_titulo">Registro de Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="password">Contraseña</string>
    <string name="registrarse">Registrarse</string>

    <string-array name="roles_usuario">
        <item>CLIENTE</item>
        <item>ADMINISTRADORLEGAL</item>
        <item>DISTRIBUIDOR</item>
        <item>OPERADOR</item>
    </string-array>

    <string-array name="spinner_combustible">
        <item>Seleccione el tipo de combustible</item>
        <item>Corriente</item>
        <item>Diesel</item>
    </string-array>

    <string-array name="zone_array">
        <item>Ciudad Bolivar</item>
        <item>Kennedy</item>
        <item>Suba</item>
        <item>Tunjuelito</item>
        <item>Bosa</item>
        <item>Chapinero</item>
        <item>Teusaquillo</item>
    </string-array>

    <string-array name="type_array">
        <item>Corriente</item>
        <item>Diesel</item>
    </string-array>

    <string-array name="vehicle_array">
        <item>Carro Particular</item>
        <item>Moto Particular</item>
        <item>Camion de Carga</item>
        <item>Taxi</item>
        <item>Bus Urbano</item>
    </string-array>

</resources>